<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeDashBoard.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="19dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_search_drawable"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/my_cart"
                android:gravity="center"/>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/nothing_to_show"
                android:id="@+id/noCartItemsTextView"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myCartRecyclerView"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"
        android:padding="10dp"
        android:weightSum="5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/total_amount"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:text="@string/rupees_symbol"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:id="@+id/totalAmountTextView"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:background="@drawable/popup_drawable"
            android:backgroundTint="@color/light_yellow"
            android:textColor="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/checkout"
            android:onClick="checkoutOnClick"/>

    </LinearLayout>

</RelativeLayout>
