<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.WelcomeSlidesActivity">

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/welcomeSlidesViewPager"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/maroon"
        android:textAllCaps="true"
        android:text="@string/skip"
        android:id="@+id/skipTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/maroon"
        android:textAllCaps="true"
        android:text="@string/next"
        android:id="@+id/nextTextView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/keypad_button_drawable"
        android:backgroundTint="@color/maroon"
        android:textColor="@android:color/background_light"
        android:text="@string/lets_get_started"
        android:singleLine="true"
        android:visibility="gone"
        android:id="@+id/letsGetStartedButton"/>

</RelativeLayout>
