<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/check_outline_drawable"
                android:scaleType="fitXY"
                app:tint="@color/light_yellow"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/order_confirmation"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:id="@+id/confirmOrderListView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/order_id"
            android:id="@+id/confirmOrderOrderIDTextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/date"
            android:id="@+id/confirmOrderDateTextView"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/circular_button_drawable"
            android:backgroundTint="@color/light_yellow"
            android:textColor="@android:color/background_light"
            android:text="OK"
            android:textSize="15sp"
            android:id="@+id/confirmOrderOKButton"/>

    </LinearLayout>

</RelativeLayout>